--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,36 +5,22 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="false"
+        android:name=".App"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubUser">
+        android:theme="@style/Theme.App.Starting">
+
         <activity
-            android:name=".ui.setting.SettingActivity"
-            android:exported="true"
-            android:theme="@style/Theme.NoActionBar"/>
-        <activity
-            android:name=".ui.favorite.FavoriteActivity"
-            android:exported="true"
-            android:theme="@style/Theme.NoActionBar" />
-        <activity
-            android:name=".ui.splash.SplashScreen"
-            android:exported="true"
-            android:theme="@style/Theme.NoActionBar">
+            android:name=".ui.main.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.detail_user.DetailUserActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
