add unit test for room database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -58,6 +59,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    implementation 'com.android.support:multidex:1.0.3'
     //lottie
     implementation "com.airbnb.android:lottie:$lottie_version"
     //splashscreen
@@ -87,13 +89,13 @@ dependencies {
 
     //room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.test:core-ktx:1.4.0'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-paging:$room_version"
-    //test
+
+    //local test
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
     testImplementation "org.mockito:mockito-inline:$mockitoVersion"
     testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
@@ -102,4 +104,13 @@ dependencies {
     testImplementation 'app.cash.turbine:turbine:0.7.0'
     testImplementation 'com.android.support.test:runner:1.0.2'
     testImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
+
+    //instrument test
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "org.mockito:mockito-core:2.21.0"
+    androidTestImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+
 }
