--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+
+    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+    //multidex
     implementation 'com.android.support:multidex:1.0.3'
     //lottie
     implementation "com.airbnb.android:lottie:$lottie_version"
@@ -111,6 +114,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "org.mockito:mockito-core:2.21.0"
     androidTestImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
-
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
 }
