add navigation component

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,11 @@ dependencies {
     //lottie
     implementation "com.airbnb.android:lottie:$lottie_version"
     //splashscreen
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
+    //navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     //datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -112,7 +116,6 @@ dependencies {
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "org.mockito:mockito-core:2.21.0"
     androidTestImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
 }
