--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ ext {
     mockitoVersion = '3.6.0'
     mockitoKotlinVersion = '2.2.0'
     androidCoreTestVersion = '2.1.0'
+    nav_version = "2.4.1"
 }
 
 task clean(type: Delete) {
